Bug 118799 - Pop-ups over spellcheck dialog allow interaction w underlying window ( not GTK )
Summary: Pop-ups over spellcheck dialog allow interaction w underlying window ( not GTK )
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.2.0 target:6.1.2
Keywords:
Depends on:
Blocks:
 
Reported: 2018-07-17 11:57 UTC by Katarina Behrens (Inactive)
Modified: 2018-09-04 15:58 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Katarina Behrens (Inactive) 2018-07-17 11:57:40 UTC
Description:
As per summary, IDK if this happens because the pop-up is not modal or because it's parentless. 

Steps to Reproduce:
1. Open empty Impress or Draw doc
2. Menu Tools > Spelling or F7. 
3. A small pop-up appears ("... Do you want to continue from the beginning?" [yes] [no])
4. Click into underlying spelling dialog 

Actual Results:
The small pop-up moves into the background and until you find it, bring it to the foreground and close it, you can't interact with the spelling dialog

Expected Results:
Um, dunno ... make the pop-up truly modal and impossible to move to the background? 


Reproducible: Always


User Profile Reset: No



Additional Info:
For gtk3 frontend, this is likely a regression, afaics it works in 5.3.7 (for other Un*x frontends, it never really work because ain't no native modality)

It also works in Writer, there you can see this kind of grey overlay on the spelling dialog (which by itself is non-modal)
Comment 1 Xisco Faulí 2018-08-22 14:04:35 UTC
Reproduced back to 

LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4

with GEN and GTK3 but not with GTK.

Caolán, I thought you could be interested in this issue...
Comment 2 Caolán McNamara 2018-08-22 15:13:36 UTC
I think we can improve that
Comment 3 Commit Notification 2018-08-22 16:31:02 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=50c9ed67d29d6105f3907cb7a2fe3322685af53c

Resolves: tdf#118799 use spelling/search dialog as message dialog parent

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2018-09-04 11:35:13 UTC
Verified in

Version: 6.2.0.0.alpha0+
Build ID: bf8fbbaa683ef7eef5f9587b60486f622b50cb80
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded

@Caolán, Thanks for fixing this!

Cherry-picked to 6-1: https://gerrit.libreoffice.org/#/c/59975/
Comment 5 Commit Notification 2018-09-04 15:58:25 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=eda6f4bab8cf7ea899c875581d47c96cf006f657&h=libreoffice-6-1

Resolves: tdf#118799 use spelling/search dialog as message dialog parent

It will be available in 6.1.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.