Resolves: tdf#118799 use spelling/search dialog as message dialog parent

when visible

Change-Id: Id4d6df2a85aebd6887949f285e1a5ec1046dbf64
Reviewed-on: https://gerrit.libreoffice.org/59456
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>